# stf

./: .#CMakeLists.txt  .gitignore  CMakeLists.txt  README.md  main.cpp  msrc.cpp  segmentation.cpp  stf.files  stf.includes  test.cpp  tumor.cpp
forest/: DecisionTree.h  Histogram.h  Node.h  RandomForest.h  eigen_util.h  feature.h  forest.files  forest.includes  stl_util.h  util.h
gmm/: GMM.h
msrc/: CMakeLists.txt  PatchFeature.h  msrc.cpp  util.h
test/: CMakeLists.txt  IdentityFeature.h  test.cpp  test_gmm.cpp  util.h
tumor/: CMakeLists.txt  SpatialFeature.h  tumor.cpp  util.h
util/: eigen.h  general.h  stl.h  tbb.h
